# Interview

./: .gitignore  README.md  output.txt  question_bank.txt  requirements.txt  run_server.sh  test_interview.sh  tmp_group_anagrams_bad.py  tmp_group_anagrams_ok.py  tmp_lru_cache_bad.py  tmp_lru_cache_ok.java  tmp_number_of_islands_bad.py  tmp_number_of_islands_ok.java  tmp_number_of_islands_ok.py  tmp_valid_parentheses_bad.py  tmp_valid_parentheses_ok.java  tmp_valid_parentheses_ok.py
app/: app.py  auth.py  config.py  db.py  gemini_client.py  gemini_client.py.backup  llm_client.py  models.py  ood_questions.py  openai_client.py  question_bank.py  question_tests.py  resume_processor.py  state.py  test_runner.py  tts.py  whisper_service.py
docs/: IMPLEMENTATION_COMPLETE.md  LLM_CODE_EDITOR_FLOW.md  MONACO_EDITOR_FIXES.md  PHASE_TRANSITION_FIXES.md  (+2 more)
stock/: .gitignore  README.md  pyproject.toml
stock/config/: stage1.yaml  stage2.yaml
stock/docs/: data-contract.md  plan.md  stage-1-data-foundation.md  stage-1-runbook.md  stage-2-backtest-baselines.md  stage-2-runbook.md
stock/src/stock_pipeline/: __init__.py  asof.py  calendar.py  cli.py  config.py  ingest_actions.py  ingest_facts.py  ingest_master.py  ingest_prices.py  io_utils.py  manifest.py  nasdaq.py  panel.py  pipeline.py  schema_lock.py  stage2_backtest.py  stage2_cli.py  stage2_config.py  transform_utils.py  universe.py  validation.py
stock/tests/: test_asof.py  test_calendar.py  test_id_resolution.py  test_nasdaq.py  test_schema_lock.py  test_stage2.py  test_universe.py  test_validation.py
storage/: app.db  (+1 more)
(+73 files in other folders)
